# rtfm-agent

./: .gitignore  docker-compose.yml  flake.nix  pyproject.toml  readme.md
app/: ai_client.py  config.py  db.py  lifespan.py  logging_config.py  main.py  middleware.py
app/ingestion/: chunker.py  embedder.py  models.py  pipeline.py
scripts/: postgres-schema.sql
