[project]
name = "rtfm-for-me"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "openai>=1.30",           # swap for anthropic if needed
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
    "redis>=5.0",
    # "langchain>=0.3",       # uncomment if you want it
    # "langchain-community>=0.3",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",            # for FastAPI test client
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
