[project]
name = "rtfm-for-me"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "openai>=1.50",           # openai SDK pointed at Ollama
    "psycopg[async,pool]>=3.1",
    "pgvector>=0.3",
    "redis>=5.0",
    "pydantic-settings>=2.0", # for config.py
    "tiktoken>=0.7",          # token counting in chunker
    "watchfiles>=0.21",       # async folder watcher
    "python-multipart>=0.0.9", # for file upload endpoint later
    "beautifulsoup4>=4.12",
    "python-json-logger>=2.0"
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",            # for FastAPI test client
    "ruff>=0.4",
    "pytest-mock>=3.14",      # useful for mocking Ollama in tests
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
